Refactor: Address critical documentation inconsistencies
Major improvements based on critical review:

1. CLI Specification Unification
   - Unified generate/secure commands into single 'attest' command
   - Added --local flag for development mode
   - Clarified execution context detection (CI vs local)

2. Atomic Evidence Formal Definition
   - Added mathematical definition: E = (A, C, T, σ)
   - Defined atomicity conditions with formal constraints
   - Specified non-atomic violation cases
   - Added implementation guarantees (TOCTOU prevention)

3. Exit Code System Revision
   - Introduced 3-level system (0/1/2)
   - Exit 0: Complete success
   - Exit 1: Fatal cryptographic/policy failure
   - Exit 2: Partial success (infrastructure degraded)
   - Added CI configuration examples

4. Local Attestation Lifecycle
   - Added 'provenix publish' command for re-publication
   - Defined auto-save location (.provenix/attestations/)
   - Specified attestation JSON structure
   - Documented trust model (with/without Rekor)

5. Documentation Restructuring
   - Deleted MPV.md (90% duplicate of README)
   - Created docs/roadmap.md with development phases
   - Added success metrics and risk assessment

6. Technical Stack Enhancement
   - Added dependency management risks and mitigations
   - Documented version pinning strategy
   - Included compatibility matrix
   - Discussed future plugin architecture
   - Added security considerations for Provenix itself

Breaking changes: None (documentation only)
Fixes: Critical inconsistencies in CLI commands, exit codes, and atomic evidence definition

--- a/README
+++ b/README
@@ -15,11 +15,41 @@ Atomic Evidence means:
 All evidence (SBOM, vulnerability results, provenance) is generated in a single execution context and cryptographically bound to the exact artifact digest at the moment of attestation.
 
 It does not mean that all checks must pass.
-	•	Evidence may contain gaps
-	•	External publishing may partially fail
-	•	Integrity must never be broken
+• Evidence may contain gaps
+• External publishing may partially fail
+• Integrity must never be broken
 
 If atomicity is violated → Provenix fails hard.
+
+⸻
+
+Formal Definition of Atomic Evidence
+
+Let E = (A, C, T, σ) represent evidence, where:
+• A: Artifact (digest: SHA256)
+• C: Context (SBOM, Vulnerabilities, Provenance)
+• T: Timestamp (execution time)
+• σ: Cryptographic signature
+
+Atomicity Conditions:
+
+1. ∀c ∈ C, hash(c) is included in σ
+2. T is unique within a single execution session
+3. Generation order of C is deterministic (SBOM → Scan → Attestation)
+4. Digest of A is finalized before generating C
+
+Non-Atomic Cases (Violations):
+
+    •	SBOM and Scan generated in separate processes
+    •	Artifact modified during evidence generation
+    •	Signature hash differs from SBOM generation hash
+
+Implementation Guarantees:
+
+    •	Memory pipeline directly connects SBOM → Grype (no intermediate files)
+    •	Artifact hash computed once at start, referenced thereafter
+    •	All components share the same execution_id
+    •	TOCTOU (Time-of-Check to Time-of-Use) attacks prevented by design
 
 ⸻
 
@@ -27,9 +57,13 @@ Zero-Config First (MVP Philosophy)
 
 Provenix is designed so that OSS maintainers can run it with zero configuration:
 
-provenix generate <artifact>
+provenix attest <artifact>
 
 No keys. No YAML. No CI glue code.
+
+For local development without signing:
+
+provenix attest <artifact> --local
 
 Important Design Choice
 
@@ -38,9 +72,9 @@ When no configuration file is provided:
 Provenix automatically generates an in-memory default policy.
 
 This is not only acceptable — it is recommended.
-	•	Users get safe, predictable behavior
-	•	Defaults are explicit and documented
-	•	Generated policy is shown in logs (--debug)
+• Users get safe, predictable behavior
+• Defaults are explicit and documented
+• Generated policy is shown in logs (--debug)
 
 ⸻
 
@@ -49,90 +83,90 @@ Implicit Default Policy (Zero Config)
 The following policies are implicitly applied when provenix.yaml is absent.
 
 1. Identity Policy
-	•	Strategy: Keyless (OIDC)
-	•	Identity source:
-	•	CI: GitHub Actions / GitLab CI (auto-detected)
-	•	Local: local://user@host
+   • Strategy: Keyless (OIDC)
+   • Identity source:
+   • CI: GitHub Actions / GitLab CI (auto-detected)
+   • Local: local://user@host
 
 No private keys are ever managed by the user.
 
 ⸻
 
 2. Attestation Policy
-	•	Tool: Cosign
-	•	Format: in-toto Statement v1
-	•	Scope: Minimal, honest provenance
+   • Tool: Cosign
+   • Format: in-toto Statement v1
+   • Scope: Minimal, honest provenance
 
 Included:
-	•	Artifact digest
-	•	Execution environment
-	•	Source reference (if detectable)
-	•	SBOM summary
-	•	Vulnerability scan summary
+• Artifact digest
+• Execution environment
+• Source reference (if detectable)
+• SBOM summary
+• Vulnerability scan summary
 
 Explicitly not claimed:
-	•	SLSA L3/L4 compliance
-	•	Code review or approval guarantees
-	•	Hardened builder assertions
+• SLSA L3/L4 compliance
+• Code review or approval guarantees
+• Hardened builder assertions
 
 ⸻
 
 3. SBOM Policy
-	•	Enabled by default
-	•	Tool: Syft (library mode)
-	•	Format: CycloneDX JSON
+   • Enabled by default
+   • Tool: Syft (library mode)
+   • Format: CycloneDX JSON
 
 SBOM is:
-	•	Generated in-memory
-	•	Never written as a standalone file
-	•	Cryptographically bound into the attestation
+• Generated in-memory
+• Never written as a standalone file
+• Cryptographically bound into the attestation
 
 This prevents TOCTOU-style replacement.
 
 ⸻
 
 4. Vulnerability Scan Policy (Default: ENABLED)
-	•	Enabled by default
-	•	Tool: Grype
-	•	Mode: Observe
+   • Enabled by default
+   • Tool: Grype
+   • Mode: Observe
 
 Behavior:
-	•	Vulnerabilities are detected and recorded
-	•	Severity counts are embedded in attestation
-	•	Build is NOT blocked by findings
+• Vulnerabilities are detected and recorded
+• Severity counts are embedded in attestation
+• Build is NOT blocked by findings
 
 Vulnerabilities are treated as evidence gaps, not failures.
 
 ⸻
 
 5. License Checks
-	•	❌ Not implemented in MVP
-	•	❌ No implicit or explicit license enforcement
+   • ❌ Not implemented in MVP
+   • ❌ No implicit or explicit license enforcement
 
 This is intentionally excluded to keep scope honest.
 
 ⸻
 
 6. Enforcement Mode
-	•	Mode: Observer (fixed in zero-config)
+   • Mode: Observer (fixed in zero-config)
 
 Rules:
-	•	Cryptographic failures → exit 1
-	•	Evidence gaps → recorded, exit 0
-	•	Infra failures → degraded, exit 0
+• Cryptographic failures → exit 1
+• Evidence gaps → recorded, exit 0
+• Infra failures → degraded, exit 0
 
 Provenix never blocks silently.
 
 ⸻
 
 7. Transparency Policy
-	•	Rekor publish:
-	•	CI: enabled by default
-	•	Local: disabled by default
+   • Rekor publish:
+   • CI: enabled by default
+   • Local: disabled by default
 
 If Rekor is unavailable:
-	•	Local attestation is still produced
-	•	Failure is explicitly recorded
+• Local attestation is still produced
+• Failure is explicitly recorded
 
 Evidence is never discarded.
 
@@ -141,24 +175,25 @@ Evidence is never discarded.
 Configuration File (Optional, Opt-In)
 
 Advanced users may provide provenix.yaml to:
-	•	Enforce strict policies
-	•	Declare SLSA intent
-	•	Add organization-specific rules
+• Enforce strict policies
+• Declare SLSA intent
+• Add organization-specific rules
 
 Example:
 
 version: 0.1
 identity:
-  strategy: keyless
-  issuer: github
+strategy: keyless
+issuer: github
 
 attestations:
-  - type: provenance
-  - type: vulnerability-scan
-    on_failure: warn
+
+- type: provenance
+- type: vulnerability-scan
+  on_failure: warn
 
 enforcement:
-  mode: strict
+mode: strict
 
 Providing a config only adds constraints — it never weakens defaults.
 
@@ -169,10 +204,10 @@ What Provenix Explicitly Does NOT Guarantee
 Provenix is precise about its boundaries.
 
 It does NOT guarantee:
-	•	That source code was reviewed or approved
-	•	That dependencies are authentic or trustworthy
-	•	That the build environment is hardened
-	•	That runtime behavior is secure
+• That source code was reviewed or approved
+• That dependencies are authentic or trustworthy
+• That the build environment is hardened
+• That runtime behavior is secure
 
 It guarantees only what it can prove.
 
@@ -180,20 +215,39 @@ It guarantees only what it can prove.
 
 Failure Model (Atomic by Design)
 
-Provenix classifies failures as:
-	1.	Cryptographic Failure → hard stop
-	2.	Evidence Gap → recorded, continue
-	3.	Infrastructure Failure → degraded, continue
+Provenix classifies failures into three categories:
+
+1. Cryptographic Failure → Exit 1 (hard stop)
+
+   - Signature verification failed
+   - Hash mismatch between components
+   - Attestation integrity violated
+
+2. Evidence Gap → Exit 2 (recorded, continue)
+
+   - Vulnerabilities detected (observe mode)
+   - Unsigned commits, dirty working tree
+   - Missing optional checks
+
+3. Infrastructure Failure → Exit 2 (degraded, continue)
+   - Rekor unreachable
+   - Network timeout
+   - Local attestation saved, publish incomplete
+
+Exit Code Summary:
+• 0: Complete success (all evidence generated and published)
+• 1: Fatal failure (cryptographic or policy violation)
+• 2: Partial success (evidence generated, publishing failed)
 
 Atomic Evidence succeeds when imperfection is explicit.
 
 ⸻
 
 Summary
-	•	Zero-config is a first-class feature
-	•	Default policies are safe, minimal, and honest
-	•	Vulnerability scanning is enabled by default
-	•	Attestations are always generated with Cosign
-	•	Enforcement is explicit and opt-in
+• Zero-config is a first-class feature
+• Default policies are safe, minimal, and honest
+• Vulnerability scanning is enabled by default
+• Attestations are always generated with Cosign
+• Enforcement is explicit and opt-in
 
 Provenix records reality. You decide what to enforce.
