Add project-scoped configuration management
Design decisions:
1. NO mandatory `provenix init` - tool works immediately after install
2. Configuration is completely optional (zero-config first)
3. Config search limited to project directory (security boundary)
4. Never search ~/.provenix/ or /etc/provenix/ (prevents cross-project pollution)

New features:
- `provenix init` - Optional setup helper (generates template + .gitignore suggestions)
- `provenix config show` - Display effective merged configuration
- `provenix config validate` - Validate config file constraints

Configuration discovery order:
1. --config flag
2. PROVENIX_CONFIG env var (absolute path only)
3. ./provenix.yaml (current dir)
4. ./.provenix/config.yaml (local overrides, gitignored)
5. Walk up to .git and check provenix.yaml
6. Built-in defaults

Key principles:
- Configuration is additive (adds constraints, never weakens security)
- Project-scoped only (no global config pollution)
- Team config in Git (provenix.yaml committed)
- Personal overrides in .provenix/config.yaml (gitignored)

Files changed:
- README: Added configuration philosophy section
- docs/cli_specification.md: Added init, config commands
- docs/configuration.md: Comprehensive config management guide
- docs/roadmap.md: Added config commands to Phase 4

Rationale for no mandatory init:
- Aligns with "Zero-Config First" philosophy
- Reduces friction (brew install -> provenix attest)
- CI/CD works without setup step
- init is helpful but never required

--- a/README
+++ b/README
@@ -172,6 +172,43 @@ Evidence is never discarded.
 
 ⸻
 
+Configuration Philosophy
+
+Provenix follows a **Progressive Configuration** model:
+
+1. **Zero-Config (Default)**: Works out of the box with safe defaults
+2. **Minimal Config**: Add constraints without managing complexity  
+3. **Full Control**: Enterprise-grade policy enforcement
+
+**Configuration File Discovery:**
+
+`provenix.yaml` is **completely optional**. When absent, Provenix uses safe built-in defaults.
+
+Discovery order (project-scoped only):
+1. `--config` flag
+2. `PROVENIX_CONFIG` environment variable
+3. `./provenix.yaml` (current directory)
+4. `./.provenix/config.yaml` (local overrides, add to .gitignore)
+5. Walk up to `.git` directory and check `provenix.yaml`
+6. Built-in defaults (no config needed)
+
+**Security boundary:** Provenix never searches outside your project directory (`~/.provenix/` or `/etc/provenix/` are NOT used).
+
+**Recommended .gitignore:**
+```
+.provenix/config.yaml    # Personal settings (don't commit)
+.provenix/cache/         # SBOM database cache
+.provenix/attestations/  # Local attestations (regenerate in CI)
+```
+
+**Optional Setup Helper:**
+```bash
+# Generate template config (completely optional)
+provenix init
+```
+
+⸻
+
 Configuration File (Optional, Opt-In)
 
 Advanced users may provide provenix.yaml to:
